force-app/main/default/objects/Process_Bulk_Custom_Emails__c/Process_Bulk_Custom_Emails__c.object-meta.xml
<CustomObject>
    <label>Process Bulk Custom Emails</label>
    <nameField>
        <label>Process Bulk Custom Emails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Bulk Custom Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>