force-app/main/default/objects/Process_Bulk_Custom_Emails__c/fields/Custom_Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email_Template_Id__c</fullName>
    <label>Custom Email Template Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>