force-app/main/default/objects/Process_Bulk_Custom_Emails__c/fields/Merged_Body__c.field-meta.xml
<CustomField>
    <fullName>Merged_Body__c</fullName>
    <label>Merged Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>