force-app/main/default/objects/Process_Bulk_Custom_Emails__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>